<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:background="@color/white"
        android:paddingStart="4dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_feedback_back"
        app:title="@string/app_widgets"
        app:titleTextAppearance="@style/ScreenshotToolbarTitle"
        app:titleTextColor="#09183F" />

    <TextView
        android:id="@+id/tv_guide_message"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/first_widget_msg"
        android:textColor="#6B7280"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_main_size"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/_4_x_2_widgets"
        android:textColor="#222222"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_guide_message" />

    <ImageView
        android:id="@+id/iv_main_widget"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/app_widget_preview_figma"
        app:layout_constraintDimensionRatio="343:200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_size" />

    <TextView
        android:id="@+id/tv_add_main"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_feedback_submit"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/Add_to_the_home_screen"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_main_widget" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/goWidgetDirections"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_app_widget_manual"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_main">

        <ImageView
            android:id="@+id/iv_manual_widget"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_app_widget_figma"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_manual_title"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="11dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/manually_add_widgets"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/iv_manual_arrow"
            app:layout_constraintStart_toEndOf="@id/iv_manual_widget"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginStart="12dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/click_to_see_how_to_add_manually"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/iv_manual_arrow"
            app:layout_constraintStart_toEndOf="@id/iv_manual_widget"
            app:layout_constraintTop_toBottomOf="@id/tv_manual_title" />

        <ImageView
            android:id="@+id/iv_manual_arrow"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
